[metadata]
name = allrest
version = 0.0.1
description = Considering ALL factors in Rectilinear Steiner Tree
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    matplotlib
    torch
    jupyter
    numpy
    scipy
    PyQt5
include_package_data = True
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    allrest = allrest.app:main